# openmm-dlext

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  setup.cfg
.github/workflows/: ci.yml  docker.yml  trunk.yml
.trunk/: out  trunk.yaml
cmake/Modules/: FetchDLPack.cmake  Fetchpybind11.cmake  FindOpenMM.cmake  FindSWIG.cmake  OpenMMTools.cmake
include/: cxx11utils.h
openmmapi/: CMakeLists.txt
openmmapi/include/: .DLExt.h.swp  ContextView.h  Convert.h  DLExt.h  DLExtForce.h
openmmapi/include/internal/: ContextView.h  DLExt.h  DLExtForceImpl.h
openmmapi/src/: CMakeLists.txt  ContextView.cpp  DLExtForce.cpp  DLExtForceImpl.cpp
wrappers/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  DLExtForce.i  OpenMMForce.i  PyDLExt.cpp  PyDLExt.h  openmm_dlext.i  pyproject.toml  setup.cfg
wrappers/python/dlext/: __init__.py
wrappers/python/openmm_dlext/: __init__.py
